--- a/client/templates/client/user_reports.html
+++ b/client/templates/client/user_reports.html
@@ -83,7 +83,7 @@
                       {{ sensor_alert.data.first.epoch|epoch2Date }}
                     </td>
                     <td>
-                      {{ sensor_alert.finished_at|epoch2Date }}
+                      {{ sensor_alert.finished_at}}
                     </td>
                     <td align="center">
                       Min. {{ sensor_alert.min_value|floatformat:2}}{{ sensor_alert.sensor_type.subfix}}
@@ -163,7 +163,7 @@
                       {{ sensor_alert.data.first.epoch|epoch2Date }}
                     </td>
                     <td>
-                      {{ sensor_alert.finished_at|epoch2Date}}
+                      {{ sensor_alert.finished_at }}
                     </td>
                     <td align="center">
                       Min. {{ sensor_alert.min_value|floatformat:2}}{{ sensor_alert.sensor_type.subfix}}
