--- a/dashboard/templates/admin/admin_clients_list.html
+++ b/dashboard/templates/admin/admin_clients_list.html
@@ -9,8 +9,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        ADMINISTRACIÓN DE CLIENTES
-        <small>Listado de Clientes / Usuarios</small>
+        ADMINISTRACIÓN DE USUARIOS REGISTRADOS
       </h1>
       <ol class="breadcrumb">
         <li>
@@ -29,16 +28,19 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title">Lista de proyectos clientes </h3>
+            <h3 class="box-title">
+              Usuarios registrados en el sistema
+            </h3>
           </div><!-- /.box-header -->
           <div class="box-body">
             <table id="table_projects" class="table table-bordered table-striped">
               <thead>
                 <tr>
-                  <th>ID Usuario</th>
-                  <th>Nombre del Usuario</th>
                   <th>Empresa</th>
-                  <th>Estatus</th>
+                  <th>Nombre del Usuario</th>
+                  <th>Email Registrado</th>
+                  <th># Proyectos Asignados</th>
+                  <th>Ultimo login</th>
                   <th>Accion</th>
                 </tr>
               </thead>
@@ -46,15 +48,19 @@
 
                 {% for client in client_list %}
                 <tr>
-                  <td> {{client.id}} </td>
-                  <td> {{client.user}} </td>
                   <td> {{client.enterprise}} </td>
+                  <td> {{client.user}} </td>
+                  <td> {{client.user.email}} </td>
+                  <td> {{client.projects.count}} </td>
+                  <td> {{client.user.last_login}} </td>
 
-                  {% if  enterprise.id|isEven == 0%}
-                    <td> <span class="label label-danger">Pendiente Success</span> </td>
-                  {% else %}
-                    <td> <span class="label label-success">Estatus Correcto</span> </td>
-                  {% endif %}
+                  {% comment %}
+                    {% if  enterprise.id|isEven == 0%}
+                      <td> <span class="label label-danger">Pendiente Success</span> </td>
+                    {% else %}
+                      <td> <span class="label label-success">Estatus Correcto</span> </td>
+                    {% endif %}
+                  {% endcomment %}
 
                   <td>
                     <div class="btn-group">
@@ -74,15 +80,6 @@
                 {% endfor %}
 
               </tbody>
-              <tfoot>
-                <tr>
-                  <th>ID Usuario</th>
-                  <th>Nombre del Usuario</th>
-                  <th>Fecha Creación</th>
-                  <th>Estatus</th>
-                  <th>Accion</th>
-                </tr>
-              </tfoot>
             </table>
           </div><!-- /.box-body -->
         </div><!-- /.box -->
@@ -119,9 +116,9 @@
     $('#table_projects').DataTable({
       "paging": true,
       "lengthChange": false,
-      "searching": true,
+      "searching": false,
       "ordering": true,
-      "info": true,
+      "info": false,
       "autoWidth": true
     });
   });
