REPORTS - Alerts Detail :D

--- a/client/templates/client/user_reports.html
+++ b/client/templates/client/user_reports.html
@@ -111,7 +111,7 @@
                     </td>
                     <td  align="center">
                       <div class="btn-group">
-                        <div id="detalle_{{ sensor_alert.id}}" class="btn btn-success">Grafica</div>
+                        <a href="/dash/alerts/{{ alert.id}}" id="detalle_{{ alert.id}}" class="btn btn-success">Ver Detalle</a>
                       </div>
                     </td>
                   </tr>
@@ -191,7 +191,7 @@
                     </td>
                     <td  align="center">
                       <div class="btn-group">
-                        <div id="detalle_{{ sensor_alert.id}}" class="btn btn-success">Grafica</div>
+                        <a href="/dash/alerts/{{ alert.id}}" id="detalle_{{ alert.id}}" class="btn btn-success">Ver Detalle</a>
                       </div>
                     </td>
                   </tr>
