--- a/client/templates/client/user_selected_sensor.html
+++ b/client/templates/client/user_selected_sensor.html
@@ -650,7 +650,7 @@ function convertEpoch2Date(epochData){
         ],
      },
      opens: "center",
-     drops: "up",
+     drops: "down",
      showWeekNumbers:true,
      timePicker: true,
      timePickerIncrement: 10,
