--- a/client/templates/client/user_reports.html
+++ b/client/templates/client/user_reports.html
@@ -418,7 +418,7 @@
       $('#block_alerts_inactive').hide();
   }
 
-  $("[id^=detalle_]").click(function(){
+  $("[id^=detalle_not_]").click(function(){
 
     $('#detalle_grafica').modal('show');
 
