--- a/dashboard/templates/admin/admin_systemstatus.html
+++ b/dashboard/templates/admin/admin_systemstatus.html
@@ -34,7 +34,7 @@
       <div class="box box-info">
         <div class="box-header with-border">
           <h3 class="box-title">
-            Transmisores
+            Transmisores Creados
           </h3>
           <div class="box-tools pull-right">
             <button class="btn btn-box-tool" data-widget="collapse">
@@ -72,7 +72,7 @@
                         {{transmisor.arduino_token}}
                       </td>
                       <td>
-                        {{transmisor.sensor_data}}
+
                       </td>
                       <td id="{{transmisor.id}}">
                         Data
