--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -380,7 +380,7 @@
           </ul>
         </li>
 
-        <li><a href="{% url 'sensorEquipmentList' %}"><i class="fa fa-laptop"></i> <span>STATUS GENERAL</span></a></li>
+        <li><a href="{% url 'status' %}"><i class="fa fa-laptop"></i> <span>STATUS GENERAL</span></a></li>
 
       {% else %}
 
