--- a/utils/templates/utils/email/alerta_rango.html
+++ b/utils/templates/utils/email/alerta_rango.html
@@ -1,4 +1,5 @@
 {% load arduino_tags %}
+{% load i18n %}
 
 <style>
   html{
@@ -9,6 +10,8 @@
      line-height: 30px;
   }
 </style>
+
+{% language 'es' %}
 
 {% if arduinoalert.sensors_in_alert.count == 1 %}
   <h1>
@@ -83,3 +86,4 @@ Sensait Soporte
 </p>
 <!-- hola mundo {{ object.data }}
 hola mundo {{ sensordata.data }}-->
+{% endlanguage %}
