Mail changes and values :D

--- a/utils/templates/utils/email/alerta_rango.html
+++ b/utils/templates/utils/email/alerta_rango.html
@@ -71,12 +71,12 @@ Apreciable <b>{{ arduinoalert.sensor_data.last.arduino_sensor.arduino.project.no
 
 <br/>
 <p>
-Puede ver mas información de esta alerta dando click <a href="http://sensait.dyndns.org/dash/reports/{{ arduinoalert.sensor_data.last.arduino_sensor.arduino.id }}/" target="_blank">aqui</a>
+Puede ver mas información de esta alerta dando click <a href="http://sensait.dyndns.org/dash/alerts/{{ arduinoalert.id }}/" target="_blank">aqui</a>
 <br/>
 <br/>
 
-Quedamos a sus órdenes para cualquier duda o comentario.
-Sensait Soporte
+Quedamos a sus órdenes para cualquier duda o comentario.<br/>
+Sensait Soporte: <a href="mailto:jose.martinez@adumx.com?Subject=Soporte">jose.martinez@adumx.com</a>
 </p>
 
 <hr/>
