--- a/client/templates/client/client_report_delete.html
+++ b/client/templates/client/client_report_delete.html
@@ -9,7 +9,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Admin - BORRADO DE EMPRESA
+        CLIENT REPORT DELETE
         <small>BORRADO DE EMPRESA</small>
 
       </h1>
