--- a/client/templates/client/client_report_edit.html
+++ b/client/templates/client/client_report_edit.html
@@ -8,8 +8,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        CLIENT REPORT EDIT & ADD
-        <small>Control de Empresas</small>
+        CREAR REPORTE DEL SENSOR <b>{{report_list.last.sensor}}</b>
+        <small></small>
       </h1>
     </section>
 
@@ -20,7 +20,7 @@
         <div class="col-xs-12">
           <div class="box box-info">
             <div class="box-header with-border">
-              <h3 class="box-title">{% if form.initial %} Editar {% else %} Crear {% endif %} Reporte</h3>
+              <h3 class="box-title">Crear Reporte</h3>
             </div>
             <!-- /.box-header -->
             <!-- form start -->
@@ -64,8 +64,6 @@
 
 </div>
 {% endblock main_content_wrapper %}
-
-
 {% block content_js %}
 
 
