--- a/client/templates/client/client_report_list.html
+++ b/client/templates/client/client_report_list.html
@@ -11,8 +11,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        CLIENT REPORT LIST
-        <small>Reportes del sensor </small>
+        REPORTES DEL SENSOR <b>{{report_list.last.sensor}}</b>
+        <small></small>
       </h1>
     </section>
 
@@ -23,7 +23,9 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title">Lista de Reportes del sensor  </h3>
+            <h3 class="box-title">
+              Todos los reportes
+            </h3>
           </div>
           <div class="box-body">
             <table id="table_reports" class="table table-bordered table-striped">
